[package]
name = "tun_playground"
version = "0.1.0"
authors = ["Viktor Jancik <viktor.vix.jancik@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.37"
bytes = "1.0.0"
libc = "0.2.81"
mio = { version = "0.7.7", features = ["os-poll", "os-ext", "udp"] }
nix = "0.19.1"
