[package]
name = "tun_playground"
version = "0.1.0"
authors = ["Viktor Jancik <viktor.vix.jancik@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.37"
byteorder = "1.3.4"
bytes = "1.0.0"
clap = "2.33.3"
libc = "0.2.81"
mio = { version = "0.7.7", features = ["os-poll", "os-ext", "udp"] }
nix = "0.19.1"
num_cpus = "1.13.0"
parking_lot = "0.11.1"
signal-hook = { version = "0.3.2", features = ["extended-siginfo"] }
smallvec = "1.6.1"
socket2 = { version = "0.3.19", features = ["reuseport"] }
tracing = "0.1.22"
tracing-subscriber = "0.2.15"
